--- a/.github/workflows/matrix-and-codecov-on-merge-to-main.yml
+++ b/.github/workflows/matrix-and-codecov-on-merge-to-main.yml
@@ -1,9 +1,9 @@
 name: CI
 
 on:
-  push:
+  pull_request_target:
     branches:
-      - main
+    - main
   release:
     types:
       - prereleased
