--- a/.github/workflows/matrix-and-codecov-on-merge-to-main.yml
+++ b/.github/workflows/matrix-and-codecov-on-merge-to-main.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   coverage:
-    uses: Billingegroup/release-scripts/.github/workflows/_matrix-and-codecov-on-merge-to-main.yml@v0
+    uses: bobleesj/release-scripts/.github/workflows/_matrix-and-codecov-on-merge-to-main.yml@ci-linux
     with:
       project: diffpy.fourigui
       c_extension: false
