Run CI matrix on push

--- a/.github/workflows/matrix-and-codecov-on-merge-to-main.yml
+++ b/.github/workflows/matrix-and-codecov-on-merge-to-main.yml
@@ -1,13 +1,10 @@
 name: CI
 
 on:
-  pull_request_target:
+  push:
     branches:
-    - main
-  release:
-    types:
-      - prereleased
-      - published
+      - main
+  pull_request:
   workflow_dispatch:
 
 jobs:
