--- a/.github/workflows/publish-docs-on-release.yml
+++ b/.github/workflows/publish-docs-on-release.yml
@@ -7,10 +7,42 @@ on:
 
 jobs:
   docs:
-    permissions:
-      contents: write
-    uses: Billingegroup/release-scripts/.github/workflows/_publish-docs-on-release.yml@v0
-    with:
-      project: diffpy.fourigui
-      c_extension: false
-      headless: true
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out fourigui
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetches branches and tags
+
+      - name: Initialize miniconda
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          activate-environment: build
+          auto-update-conda: true
+          environment-file: environment.yml
+          auto-activate-base: false
+          python-version: 3.13
+
+      - name: Conda config
+        run: >-
+          conda config --set always_yes yes
+          --set changeps1 no
+
+      - name: Install ${{ inputs.project }} and docs requirements
+        run: |
+          conda install --file requirements/conda.txt
+          conda install --file requirements/docs.txt
+          python -m pip install . --no-deps
+
+      - name: build documents
+        run: make -C doc html
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./doc/build/html
